# pytorch-fid

./: pyproject.toml
old/: setup.py
src/pytorch_fid/: fid_score.py
