
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch_fid"
version = "1.0.0"
description = "Package for calculating Frechet Inception Distance (FID)"
requires-python = ">=3.8"
dependencies = ["numpy", "pillow", "scipy==1.13.0", "torch", "torchvision"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

#[tool.setuptools.package-data]
#fastvqa = ["*.yml"]
#
